--- a/sunset-courier-services/src/app/contact/contact.component.html
+++ b/sunset-courier-services/src/app/contact/contact.component.html
@@ -1,1 +1,28 @@
-<p>contact works!</p>
+<div class="contact">
+    <h1>Get in touch today</h1>
+
+
+    <div class="container">
+    <mat-card>
+        <mat-card-header>
+            <mat-card-title>Call us </mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <a mat-flat-button href="tel: 07458 302808"> <i class="fas fa-phone-alt"></i> 
+                07458 302808 
+            </a>
+        </mat-card-content>
+    </mat-card>
+    <mat-card>
+            <mat-card-header>
+                <mat-card-title>Email us </mat-card-title>
+            </mat-card-header>
+            <mat-card-content> 
+                <i class="fas fa-envelope"></i><a href="mailto:contact@sunsetcourierservices.co.uk">contact@sunsetcourierservices.co.uk
+                </a>
+            </mat-card-content>
+    </mat-card>
+
+    </div>
+</div>
+
