--- a/sunset-courier-services/src/app/menu/menu.component.html
+++ b/sunset-courier-services/src/app/menu/menu.component.html
@@ -1,19 +1,20 @@
 
 <div class="logo"></div>
 <div class="menu">
-  <button mat-flat-button [matMenuTriggerFor]="quote">Get a Quote</button>
-  <mat-menu #quote="matMenu">
+  <button mat-flat-button (click)="goToHome()">Home</button>
+  <button mat-flat-button (click)="goToQuote()">Get a Quote</button>
+  <!-- <mat-menu #quote="matMenu">
     <button mat-menu-item>Item 1</button>
     <button mat-menu-item>Item 2</button>
-  </mat-menu>
-  <button mat-flat-button [matMenuTriggerFor]="services">Services</button>
-  <mat-menu #services="matMenu">
+  </mat-menu> -->
+  <button mat-flat-button (click)="goToServices()">Services</button>
+  <!-- <mat-menu #services="matMenu">
     <button mat-menu-item>Item 1</button>
     <button mat-menu-item>Item 2</button>
-  </mat-menu>
-  <button mat-flat-button [matMenuTriggerFor]="contact">Contact</button>
-  <mat-menu #contact="matMenu">
+  </mat-menu> -->
+  <button mat-flat-button (click)="goToContact()">Contact</button>
+  <!-- <mat-menu #contact="matMenu">
     <button mat-menu-item>Item 1</button>
     <button mat-menu-item>Item 2</button>
-  </mat-menu>
+  </mat-menu> -->
 </div>
