--- a/sunset-courier-services/src/app/services/services.component.html
+++ b/sunset-courier-services/src/app/services/services.component.html
@@ -1,1 +1,54 @@
-<p>services works!</p>
+<div class="services">
+    <h1>Services</h1>
+        <p>
+            Our modern fleet of vans includes long wheel base and extra long wheel base, enabling us to move almost anything.
+        </p>
+    
+    <p>
+        Our drivers are always happy to help load and unload, but now and again an extra pair of hands is required we can provide you with a helper.
+    </p>
+    <p>
+        With insurance for goods in transit to a value of £10,000, you can be sure that your delivery is safe. And to keep your costs as low as possible, for non-urgent deliveries we offer an end-of-day delivery service for London postcodes.
+    </p>
+    <p>Other services provided, house removal, man with van.</p>
+
+    <div class="container">
+    <mat-card>
+        <mat-card-header>
+            <mat-card-title>Fully insured </mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <ul>
+                <li>
+                    <i class="fas fa-check-circle"></i>
+                    up to £10,000 Goods In Transit
+                </li>
+                <li>
+                    <i class="fas fa-check-circle"></i>
+                    Lorem ipsum 
+                </li>
+                <li>
+                    <i class="fas fa-check-circle"></i>
+                Lorem ipsum
+                </li>
+            </ul>
+        </mat-card-content>
+    </mat-card>
+
+    <mat-card>
+        <mat-card-header>
+            <mat-card-title>Nationwide coverage </mat-card-title>
+        </mat-card-header>
+        <mat-card-content>Lorem isum</mat-card-content>
+    </mat-card>
+    <mat-card>
+            <mat-card-header>
+                <mat-card-title>Friendly, reliable staff </mat-card-title>
+            </mat-card-header>
+            <mat-card-content>Lorem isum</mat-card-content>
+    </mat-card>
+
+    </div>
+</div>
+
+
