--- a/sunset-courier-services/src/app/app.component.html
+++ b/sunset-courier-services/src/app/app.component.html
@@ -1,9 +1,31 @@
-<header>
+<!-- <header>
     <app-menu></app-menu>
-     <div class="header-image"></div>
+     
  </header>
- 
+
 
 <router-outlet>
 </router-outlet>
-<app-footer></app-footer>
+<app-footer></app-footer> -->
+<mat-sidenav-container fullscreen>
+
+        <mat-sidenav-content fxLayout="column">
+      
+          <mat-toolbar>
+            <header><app-menu></app-menu></header>
+            
+          </mat-toolbar>
+      
+          <router-outlet>
+            <!-- content change by changing the route -->
+          </router-outlet>
+      
+          <footer fxFlexOffset="auto">
+      
+           <app-footer></app-footer>
+      
+          </footer>
+      
+        </mat-sidenav-content>
+      
+      </mat-sidenav-container>
