--- a/sunset-courier-services/src/app/contact/contact.component.html
+++ b/sunset-courier-services/src/app/contact/contact.component.html
@@ -1,11 +1,10 @@
 <div class="contact">
-    <h1>Get in touch today</h1>
-
-
+    <h1>Get in touch</h1>
+    <p>Have a question? Contact us using one of the methods below and we'll get back to.  </p>
     <div class="container">
     <mat-card>
         <mat-card-header>
-            <mat-card-title>Call us </mat-card-title>
+            <mat-card-title>Call</mat-card-title>
         </mat-card-header>
         <mat-card-content>
             <a mat-flat-button href="tel: 07458 302808"> <i class="fas fa-phone-alt"></i> 
@@ -15,14 +14,23 @@
     </mat-card>
     <mat-card>
             <mat-card-header>
-                <mat-card-title>Email us </mat-card-title>
+                <mat-card-title>Chat</mat-card-title>
+            </mat-card-header>
+            <mat-card-content> 
+                <i style="color: #25D366; font-size: 32px;" class="fab fa-whatsapp-square"></i><a href="https://wa.me/447458302808">Chat to us in WhatsApp
+                </a>
+            </mat-card-content>
+    </mat-card>
+    <mat-card>
+            <mat-card-header>
+                <mat-card-title>Email</mat-card-title>
             </mat-card-header>
             <mat-card-content> 
                 <i class="fas fa-envelope"></i><a href="mailto:contact@sunsetcourierservices.co.uk">contact@sunsetcourierservices.co.uk
                 </a>
             </mat-card-content>
     </mat-card>
+   
 
     </div>
 </div>
-
