--- a/sunset-courier-services/src/app/footer/footer.component.css
+++ b/sunset-courier-services/src/app/footer/footer.component.css
@@ -1,8 +1,9 @@
 
 footer {
-    background-color: #fafafa;
+    background-color: #263238;
     display: flex;
     font-size: 10px;
+    color: #ffffff
 }
 section {
     width: 50%;
