--- a/sunset-courier-services/src/app/home/home.component.html
+++ b/sunset-courier-services/src/app/home/home.component.html
@@ -1,7 +1,7 @@
+
  <div class="quotes">
-<!-- <h1>Get a quote</h1> -->
 <div id="quote" class="item" style="margin-right: 1%;">
-     <h1>Get a quote today</h1>
+     <h1>Driven to deliver</h1>
      <ul>
          <li>
              <i class="fas fa-check-circle"></i>
@@ -16,9 +16,10 @@
              Cras vehicula orci nec dapibus congue.
          </li>
      </ul> 
+     <a class="button" mat-flat-button (click)="goToQuotes()">Get a quote</a>
      </div>
-     <div class="item" style="margin-left: 1%;"> 
-         <app-quotation></app-quotation>
+     <div class="item" style="margin-left: 1%; background-color: transparent!important"> 
+        <div class="header-image"></div>
      </div>
  </div>
  <div id="services" class="services">
@@ -28,7 +29,7 @@
              rhoncus justo sit amet, aliquet lorem. Cras vehicula orci nec dapibus congue. Vestibulum rutrum euismod diam, 
              sit amet fermentum lorem consequat sit amet. 
 
-         <a class="more" mat-flat-button (click)="goToServices()">Find out more</a>
+         <a class="button" mat-flat-button (click)="goToServices()">Find out more</a>
          </p>
      </div>
  </div>
@@ -62,27 +63,7 @@
          <p>Small Vans to XLWB Vans, all goods are fully insured</p>
      </div>
  </div>
- <div id="contact" class="contact">
-     <div>
-         <h1>Get in touch</h1>
-
-         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ut quam vehicula, 
-                 rhoncus justo sit amet, aliquet lorem. Cras vehicula orci nec dapibus congue. Vestibulum rutrum euismod diam, 
-                 sit amet fermentum lorem consequat sit amet. 
-
-                
-         </p>
-         <div class="card-container">
-            <div class="card">
-                <p>Call us</p>
-                <a mat-flat-button href="tel: 07458 302808"> <i class="fas fa-phone-alt"></i> 07458 302808 </a>
-                
-            </div>
-            <div class="card">
-                <p>Email us</p>
-                <i class="fas fa-envelope"></i><a href="mailto:contact@sunsetcourierservices.co.uk">contact@sunsetcourierservices.co.uk</a>
-            </div>
-        </div>
-     </div>
+ <div id="contact">
+    <app-contact></app-contact> 
  </div>
 
