--- a/sunset-courier-services/src/app/services/services.component.html
+++ b/sunset-courier-services/src/app/services/services.component.html
@@ -1,17 +1,17 @@
 <div class="services">
-    <h1>Services</h1>
+    <h1>Our Services</h1>
+    <div>
         <p>
             Our modern fleet of vans includes long wheel base and extra long wheel base, enabling us to move almost anything.
         </p>
-    
-    <p>
-        Our drivers are always happy to help load and unload, but now and again an extra pair of hands is required we can provide you with a helper.
-    </p>
-    <p>
-        With insurance for goods in transit to a value of £10,000, you can be sure that your delivery is safe. And to keep your costs as low as possible, for non-urgent deliveries we offer an end-of-day delivery service for London postcodes.
-    </p>
-    <p>Other services provided, house removal, man with van.</p>
-
+        <p>
+            Our drivers are always happy to help load and unload, but now and again an extra pair of hands is required we can provide you with a helper.
+        </p>
+        <p>
+            With insurance for goods in transit to a value of £10,000, you can be sure that your delivery is safe. And to keep your costs as low as possible, for non-urgent deliveries we offer an end-of-day delivery service for London postcodes.
+        </p>
+        <p>Other services provided, house removal, man with van.</p>
+    </div>
     <div class="container">
     <mat-card>
         <mat-card-header>
