--- a/sunset-courier-services/src/app/contact/contact.component.html
+++ b/sunset-courier-services/src/app/contact/contact.component.html
@@ -16,7 +16,7 @@
             <mat-card-header>
                 <mat-card-title>Chat</mat-card-title>
             </mat-card-header>
-            <mat-card-content> 
+            <mat-card-content style="padding: 0 32px"> 
                 <i style="color: #25D366; font-size: 32px;" class="fab fa-whatsapp-square"></i><a href="https://wa.me/447458302808">Chat to us in WhatsApp
                 </a>
             </mat-card-content>
@@ -25,7 +25,7 @@
             <mat-card-header>
                 <mat-card-title>Email</mat-card-title>
             </mat-card-header>
-            <mat-card-content> 
+            <mat-card-content style="padding: 0 32px"> 
                 <i class="fas fa-envelope"></i><a href="mailto:contact@sunsetcourierservices.co.uk">contact@sunsetcourierservices.co.uk
                 </a>
             </mat-card-content>
