--- a/sunset-courier-services/src/app/home/home.component.html
+++ b/sunset-courier-services/src/app/home/home.component.html
@@ -1,8 +1,11 @@
-
- <div class="quotes">
-<div id="quote" class="item" style="margin-right: 1%;">
-     <h1>Driven to deliver</h1>
-     <ul>
+<div class="carousel">
+    <app-image-carousel></app-image-carousel>
+</div>
+ <div class="quotes" style="padding-top: 6rem;">
+<!-- class="item" style="margin-right: 1%;" -->
+<div >     
+<h1>Driven to deliver</h1>
+     <!-- <ul>
          <li>
              <i class="fas fa-check-circle"></i>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -15,12 +18,16 @@
              <i class="fas fa-check-circle"></i>
              Cras vehicula orci nec dapibus congue.
          </li>
-     </ul> 
-     <a class="button" mat-flat-button (click)="goToQuotes()">Get a quote</a>
+     </ul>  -->
+    <p>  
+
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tincidunt faucibus nisi, 
+        sed malesuada ipsum ultricies vel. Phasellus mollis efficitur velit quis rutrum. Aliquam leo odio, hendrerit quis eleifend at, vulputate ac dolor. 
+        <a class="button" mat-flat-button (click)="goToQuotes()">Get a quote</a></p>
      </div>
-     <div class="item" style="margin-left: 1%; background-color: transparent!important"> 
+     <!-- <div class="item" style="margin-left: 1%; background-color: transparent!important"> 
         <div class="header-image"></div>
-     </div>
+     </div> -->
  </div>
  <div id="services" class="services">
      <div>
