--- a/sunset-courier-services/src/styles.css
+++ b/sunset-courier-services/src/styles.css
@@ -24,3 +24,15 @@ button {
 .mat-card-header-text{
     margin:0;
 } 
+
+.mat-button.mat-accent, .mat-icon-button.mat-accent, .mat-stroked-button.mat-accent{
+    color:#ffffff!important;
+}
+.mat-flat-button.mat-accent, .mat-raised-button.mat-accent, .mat-fab.mat-accent, .mat-mini-fab.mat-accent{
+    background-color:#ffffff;
+    border-radius: 5px!important;
+}
+
+mat-toolbar {
+    z-index: 3;
+}
