--- a/sunset-courier-services/src/app/menu/menu.component.css
+++ b/sunset-courier-services/src/app/menu/menu.component.css
@@ -2,6 +2,8 @@ button {
     border-radius: 0px!important;
     text-transform: uppercase;
     font-weight: 100;
+    background-color: transparent;
+    color: #ffffff;
 }
 
 button:hover, .text-color {
@@ -9,7 +11,7 @@ button:hover, .text-color {
 }
 
 .menu {
-    padding: 35px 50px 35px 20px;
+    padding: 50px 50px 35px 20px;
     text-align: right;
     float: right;
     clear: both;
@@ -21,9 +23,9 @@ button:hover, .text-color {
     left: 50px;
     position: absolute;
     display: inline-block;
-    height: 105px;
+    height: 100%;
     top: 0;
-    width:120px;
+    width:150px;
 }
 
 img {
