added extra lorem ipsum to centre content to page

--- a/sunset-courier-services/src/app/home/home.component.html
+++ b/sunset-courier-services/src/app/home/home.component.html
@@ -21,8 +21,7 @@
      </ul>  -->
     <p>  
 
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tincidunt faucibus nisi, 
-        sed malesuada ipsum ultricies vel. Phasellus mollis efficitur velit quis rutrum. Aliquam leo odio, hendrerit quis eleifend at, vulputate ac dolor. 
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum arcu ac felis tristique condimentum. Nam lobortis quis quam a tincidunt. Vivamus tristique posuere mi, id scelerisque tortor tempor non. Praesent scelerisque tortor eget nunc fringilla, sed bibendum risus molestie. Aliquam mauris quam, interdum vitae augue vel, accumsan laoreet erat. Nullam sit amet est odio. Morbi nec risus in est accumsan egestas at ac velit. Vestibulum non ultrices turpis. In sed turpis ac eros rutrum scelerisque. Donec viverra pellentesque tellus et vestibulum. Nulla scelerisque facilisis risus, id dapibus ante consequat sed. Ut quis tortor at ipsum ultrices sagittis. Quisque nunc nibh, posuere ac turpis ac, efficitur egestas ipsum.
         <a class="button" mat-flat-button (click)="goToQuotes()">Get a quote</a></p>
      </div>
      <!-- <div class="item" style="margin-left: 1%; background-color: transparent!important"> 
@@ -32,9 +31,7 @@
  <div id="services" class="services">
      <div>
          <h1>Services</h1>
-         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ut quam vehicula, 
-             rhoncus justo sit amet, aliquet lorem. Cras vehicula orci nec dapibus congue. Vestibulum rutrum euismod diam, 
-             sit amet fermentum lorem consequat sit amet. 
+         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum arcu ac felis tristique condimentum. Nam lobortis quis quam a tincidunt. Vivamus tristique posuere mi, id scelerisque tortor tempor non. Praesent scelerisque tortor eget nunc fringilla, sed bibendum risus molestie. Aliquam mauris quam, interdum vitae augue vel, accumsan laoreet erat. Nullam sit amet est odio. Morbi nec risus in est accumsan egestas at ac velit. Vestibulum non ultrices turpis. In sed turpis ac eros rutrum scelerisque. Donec viverra pellentesque tellus et vestibulum. Nulla scelerisque facilisis risus, id dapibus ante consequat sed. Ut quis tortor at ipsum ultrices sagittis. Quisque nunc nibh, posuere ac turpis ac, efficitur egestas ipsum. 
 
          <a class="button" mat-flat-button (click)="goToServices()">Find out more</a>
          </p>
