--- a/sunset-courier-services/src/app/home/home.component.css
+++ b/sunset-courier-services/src/app/home/home.component.css
@@ -1,110 +1,110 @@
 .header-image {
-    background: url("../images/parcel-delivery.jpg") no-repeat bottom transparent;
-    background-size: contain;
-    width: 100%!important;
-    height: 5px;
-    min-height:175px;
-    margin-left: 0!important;
- 
-
+  background: url("../images/parcel-delivery.jpg") no-repeat bottom transparent;
+  background-size: contain;
+  width: 100% !important;
+  height: 5px;
+  min-height: 175px;
+  margin-left: 0 !important;
 }
 
-img{
-    display: inline-block;
+img {
+  display: inline-block;
 }
 
 button {
-     margin:20px auto;
-     display: flex;
-     text-align: center;
-     background-color: #f04b23;
-     color: #ffffff;
+  margin: 20px auto;
+  display: flex;
+  text-align: center;
+  background-color: #f04b23;
+  color: #ffffff;
 }
 
 a.button {
-    margin:20px auto;
-    display: block;
-    text-align: center;
-    background-color: #f04b23;
-    color: #ffffff;
-    text-align: center;
-    width: 150px;
-    padding: 0 30px;
-    font-size: 14px;
+  margin: 20px auto;
+  display: block;
+  text-align: center;
+  background-color: #f04b23;
+  color: #ffffff;
+  text-align: center;
+  width: 150px;
+  padding: 0 30px;
+  font-size: 14px;
 }
 
 div:nth-of-type(odd) {
-    background-color: #dddddd;
+  background-color: #dddddd;
 }
 .carousel {
-    padding:106px 0 0rem;
-    -webkit-flex-wrap:wrap;
-    -ms-flex-wrap:wrap;
-    flex-wrap:wrap;
-    margin-left:-1.2rem;
+  padding: 106px 0 0rem;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-left: -1.2rem;
 }
 
-.quotes, .services, .sales, .contact {
-    padding:10rem 0 5rem;
-    display:-webkit-box;
-    display:-webkit-flex;
-    display:-ms-flexbox;
-    display:flex;
-    -webkit-flex-wrap:wrap;
-    -ms-flex-wrap:wrap;
-    flex-wrap:wrap;
-    margin-left:-1.2rem;
+.quotes,
+.services,
+.sales,
+.contact {
+  padding: 10rem 0 5rem;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-left: -1.2rem;
 }
-
 
 /* .quotes h1 { */
-    /* margin-left:calc(1.2rem + 8.33%); */
-    /* margin-right:8.33%;
+/* margin-left:calc(1.2rem + 8.33%); */
+/* margin-right:8.33%;
     width: 100%;
     margin-bottom: 30px;
 } */
 
- .sales > div {
-    -webkit-flex-basis:calc(-1.2rem + 33.33%);
-    -ms-flex-preferred-size:calc(33.33332% - 1.2rem);
-    flex-basis:calc(-1.2rem + 33.33%);
-    max-width:calc(-1.2rem + 33.33%);
-    margin-left:1.2rem;
-    background-color: transparent!important;
-
+.sales > div {
+  -webkit-flex-basis: calc(-1.2rem + 33.33%);
+  -ms-flex-preferred-size: calc(33.33332% - 1.2rem);
+  flex-basis: calc(-1.2rem + 33.33%);
+  max-width: calc(-1.2rem + 33.33%);
+  margin-left: 1.2rem;
+  background-color: transparent !important;
 }
 
- .services > div, .sales > div.item, .contact > div, .quotes > div
-{
-    margin-left:calc(1.2rem + 8.33%);
-    margin-right:8.33%;
-    margin-bottom: 20px;
-    clear: both;
-    background-color: transparent!important;
+.services > div,
+.sales > div.item,
+.contact > div,
+.quotes > div {
+  margin-left: calc(1.2rem + 8.33%);
+  margin-right: 8.33%;
+  margin-bottom: 20px;
+  clear: both;
+  background-color: transparent !important;
 }
 
 .sales i {
-    display:-webkit-box;
-    display:-webkit-flex;
-    display:-ms-flexbox;
-    display:flex;
-    font-size: 24px;
-    margin-right: 15px;
-    vertical-align: middle;
-    min-width:30px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 24px;
+  margin-right: 15px;
+  vertical-align: middle;
+  min-width: 30px;
 }
 
 .item-heading > p {
-    font-size: 16px;
-    font-weight: 500;
-    padding: 2px 10px;
+  font-size: 16px;
+  font-weight: 500;
+  padding: 2px 10px;
 }
 
 .item-heading {
-    display:-webkit-box;
-    display:-webkit-flex;
-    background-color: transparent!important;
-
+  display: -webkit-box;
+  display: -webkit-flex;
+  background-color: transparent !important;
 }
 
 /* .quotes div {
@@ -114,45 +114,44 @@ div:nth-of-type(odd) {
 } */
 
 ul {
-    list-style-type: none;
-    padding: 0 20%;
-   margin: 0 auto;
-   display:block;
-
+  list-style-type: none;
+  padding: 0 20%;
+  margin: 0 auto;
+  display: block;
 }
 
 ul li i {
-    color: #f04b23;
-    font-size: 18px;
-    margin-right: 10px;
+  color: #f04b23;
+  font-size: 18px;
+  margin-right: 10px;
 }
 
 ul li {
-    padding: 5px 10px 15px;
+  padding: 5px 10px 15px;
 }
 
 .card-container {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 .card-container .card {
-    width: 50%;
-    text-align: center;
-    padding: 20px 0;
+  width: 50%;
+  text-align: center;
+  padding: 20px 0;
 }
 
 .card p {
-    font-weight: 500;
-    font-size: 20px;
+  font-weight: 500;
+  font-size: 20px;
 }
 
 .card a {
-    color: #f04b23;
+  color: #f04b23;
 }
 
 .card i {
-    color: #666666;
-    padding-right: 10px;
-    font-size: 14px;
+  color: #666666;
+  padding-right: 10px;
+  font-size: 14px;
 }
