--- a/sunset-courier-services/src/app/app.component.css
+++ b/sunset-courier-services/src/app/app.component.css
@@ -1,151 +1,153 @@
 .header-image {
-
-    margin: 0 auto;
-    height: 400px;
-    text-align: center;
-    clear: both;
-    top:150px;
-    display: block;
-    background: url("images/parcel-delivery.jpg") no-repeat bottom;
-    background-size: cover;
-    width: 100%;
+  margin: 0 auto;
+  height: 400px;
+  text-align: center;
+  clear: both;
+  top: 150px;
+  display: block;
+  background: url("../assets/images/carousel/parcel-delivery.jpg") no-repeat
+    bottom;
+  background-size: cover;
+  width: 100%;
 }
 
 .header-image p {
-    right: 100px;
-    top:250px;
-    padding: 10px;
-    font-size: 36px;
-    letter-spacing: 1px;
-    position: absolute;
-    font-weight: 300;
+  right: 100px;
+  top: 250px;
+  padding: 10px;
+  font-size: 36px;
+  letter-spacing: 1px;
+  position: absolute;
+  font-weight: 300;
 }
 
-header {  
-    text-align: center;
-    clear: both;
-    display: block;
-    width: 100%;
-    /* position: fixed; */
-    transition: background-color .5s ease;
-    z-index: 1000;
-    background-color: #000000;
-    /* margin-left:calc(1.2rem + 15.33%);
+header {
+  text-align: center;
+  clear: both;
+  display: block;
+  width: 100%;
+  /* position: fixed; */
+  transition: background-color 0.5s ease;
+  z-index: 1000;
+  background-color: #000000;
+  /* margin-left:calc(1.2rem + 15.33%);
     margin-right:15.33%;
     padding:10rem 0 5rem; */
 }
 
-img{
-    display: inline-block;
+img {
+  display: inline-block;
 }
 
 button {
-     margin:20px auto;
-     display: flex;
-     text-align: center;
-     background-color: #f04b23;
-     color: #ffffff;
+  margin: 20px auto;
+  display: flex;
+  text-align: center;
+  background-color: #f04b23;
+  color: #ffffff;
 }
 
 a {
-    margin:20px auto;
-    display: flex;
-    text-align: center;
-    background-color: #f04b23;
-    color: #ffffff;
-    text-align: center;
-    width: 150px;
-    padding: 0 30px;
-    font-size: 14px;
+  margin: 20px auto;
+  display: flex;
+  text-align: center;
+  background-color: #f04b23;
+  color: #ffffff;
+  text-align: center;
+  width: 150px;
+  padding: 0 30px;
+  font-size: 14px;
 }
 
 div:nth-of-type(even) {
-    background-color: #dddddd;
+  background-color: #dddddd;
 }
 
-.quotes, .services, .sales, .contact {
-    padding:8rem 0 5rem;
-    display:-webkit-box;
-    display:-webkit-flex;
-    display:-ms-flexbox;
-    display:flex;
-    -webkit-flex-wrap:wrap;
-    -ms-flex-wrap:wrap;
-    flex-wrap:wrap;
-    margin-left:-1.2rem;
+.quotes,
+.services,
+.sales,
+.contact {
+  padding: 8rem 0 5rem;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-left: -1.2rem;
 }
 
 .quotes h1 {
-    /* margin-left:calc(1.2rem + 8.33%); */
-    margin-right:8.33%;
-    width: 100%;
-    margin-bottom: 30px;
+  /* margin-left:calc(1.2rem + 8.33%); */
+  margin-right: 8.33%;
+  width: 100%;
+  margin-bottom: 30px;
 }
 
- .sales > div {
-    -webkit-flex-basis:calc(-1.2rem + 33.33%);
-    -ms-flex-preferred-size:calc(33.33332% - 1.2rem);
-    flex-basis:calc(-1.2rem + 33.33%);
-    max-width:calc(-1.2rem + 33.33%);
-    margin-left:1.2rem;
-
+.sales > div {
+  -webkit-flex-basis: calc(-1.2rem + 33.33%);
+  -ms-flex-preferred-size: calc(33.33332% - 1.2rem);
+  flex-basis: calc(-1.2rem + 33.33%);
+  max-width: calc(-1.2rem + 33.33%);
+  margin-left: 1.2rem;
 }
 
- .services > div, .sales > div.item, .contact > div
-{
-    margin-left:calc(1.2rem + 8.33%);
-    margin-right:8.33%;
-    margin-bottom: 20px;
-    clear: both;
-    background-color: transparent!important
+.services > div,
+.sales > div.item,
+.contact > div {
+  margin-left: calc(1.2rem + 8.33%);
+  margin-right: 8.33%;
+  margin-bottom: 20px;
+  clear: both;
+  background-color: transparent !important;
 }
 
 .sales i {
-    display:-webkit-box;
-    display:-webkit-flex;
-    display:-ms-flexbox;
-    display:flex;
-    font-size: 24px;
-    margin-right: 15px;
-    vertical-align: middle;
-    min-width:30px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 24px;
+  margin-right: 15px;
+  vertical-align: middle;
+  min-width: 30px;
 }
 
 .item-heading > p {
-    font-size: 16px;
-    font-weight: 500;
-    padding: 2px 10px;
+  font-size: 16px;
+  font-weight: 500;
+  padding: 2px 10px;
 }
 
 .item-heading {
-    display:-webkit-box;
-    display:-webkit-flex;
-    display:-webkit-flex;
-    display:-webkit-flex;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -webkit-flex;
+  display: -webkit-flex;
 }
 
 .quotes div {
-    margin-left: 8.33%;
-    width: 40%;
-    
+  margin-left: 8.33%;
+  width: 40%;
 }
 
 ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 ul li i {
-    color: #f04b23;
-    font-size: 18px;
-    margin-right: 10px;
+  color: #f04b23;
+  font-size: 18px;
+  margin-right: 10px;
 }
 
 ul li {
-    padding: 5px 10px 15px;
+  padding: 5px 10px 15px;
 }
 
 mat-toolbar {
-    position: fixed;
-    padding: 0px;
-    height: auto;
+  position: fixed;
+  padding: 0px;
+  height: auto;
 }
