--- a/sunset-courier-services/src/app/menu/menu.component.css
+++ b/sunset-courier-services/src/app/menu/menu.component.css
@@ -1,37 +1,38 @@
 button {
-    border-radius: 0px!important;
-    text-transform: uppercase;
-    font-weight: 100;
-    background-color: transparent;
-    color: #ffffff;
+  border-radius: 0px !important;
+  text-transform: uppercase;
+  font-weight: 100;
+  background-color: transparent;
+  color: #ffffff;
 }
 
-button:hover, .text-color {
-    color: #f04b23;
+button:hover,
+.text-color {
+  color: #f04b23;
 }
 
 .menu {
-    padding: 50px 50px 35px 20px;
-    text-align: right;
-    float: right;
-    clear: both;
+  padding: 50px 50px 35px 20px;
+  text-align: right;
+  float: right;
+  clear: both;
 }
 
 .logo {
-    background: url("../images/logo.png") no-repeat left;
-    background-size: contain;
-    left: 50px;
-    position: absolute;
-    display: inline-block;
-    height: 100%;
-    top: 0;
-    width:150px;
+  background: url("../../assets/images/logo/logo.png") no-repeat left;
+  background-size: contain;
+  left: 50px;
+  position: absolute;
+  display: inline-block;
+  height: 100%;
+  top: 0;
+  width: 150px;
 }
 
 img {
-    left: 50px;
-    position: absolute;
-    display: inline-block;
-    height: 105px;
-    top: 0;
+  left: 50px;
+  position: absolute;
+  display: inline-block;
+  height: 105px;
+  top: 0;
 }
