reestablished file paths

--- a/sunset-courier-services/src/app/app.component.css
+++ b/sunset-courier-services/src/app/app.component.css
@@ -5,7 +5,7 @@
   clear: both;
   top: 150px;
   display: block;
-  background: url("../assets/images/carousel/parcel-delivery.jpg") no-repeat
+  background: url("/assets/images/carousel/parcel-delivery.jpg") no-repeat
     bottom;
   background-size: cover;
   width: 100%;
