font changed for home page

--- a/sunset-courier-services/src/app/home/home.component.html
+++ b/sunset-courier-services/src/app/home/home.component.html
@@ -1,11 +1,11 @@
 <div class="carousel">
-    <app-image-carousel></app-image-carousel>
+  <app-image-carousel></app-image-carousel>
 </div>
- <div class="quotes" style="padding-top: 6rem;">
-<!-- class="item" style="margin-right: 1%;" -->
-<div >     
-<h1>Driven to deliver</h1>
-     <!-- <ul>
+<div class="quotes" style="padding-top: 6rem;">
+  <!-- class="item" style="margin-right: 1%;" -->
+  <div>
+    <h1>Driven to deliver</h1>
+    <!-- <ul>
          <li>
              <i class="fas fa-check-circle"></i>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -19,55 +19,86 @@
              Cras vehicula orci nec dapibus congue.
          </li>
      </ul>  -->
-    <p>  
-
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum arcu ac felis tristique condimentum. Nam lobortis quis quam a tincidunt. Vivamus tristique posuere mi, id scelerisque tortor tempor non. Praesent scelerisque tortor eget nunc fringilla, sed bibendum risus molestie. Aliquam mauris quam, interdum vitae augue vel, accumsan laoreet erat. Nullam sit amet est odio. Morbi nec risus in est accumsan egestas at ac velit. Vestibulum non ultrices turpis. In sed turpis ac eros rutrum scelerisque. Donec viverra pellentesque tellus et vestibulum. Nulla scelerisque facilisis risus, id dapibus ante consequat sed. Ut quis tortor at ipsum ultrices sagittis. Quisque nunc nibh, posuere ac turpis ac, efficitur egestas ipsum.
-        <a class="button" mat-flat-button (click)="goToQuotes()">Get a quote</a></p>
-     </div>
-     <!-- <div class="item" style="margin-left: 1%; background-color: transparent!important"> 
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum
+      arcu ac felis tristique condimentum. Nam lobortis quis quam a tincidunt.
+      Vivamus tristique posuere mi, id scelerisque tortor tempor non. Praesent
+      scelerisque tortor eget nunc fringilla, sed bibendum risus molestie.
+      Aliquam mauris quam, interdum vitae augue vel, accumsan laoreet erat.
+      Nullam sit amet est odio. Morbi nec risus in est accumsan egestas at ac
+      velit. Vestibulum non ultrices turpis. In sed turpis ac eros rutrum
+      scelerisque. Donec viverra pellentesque tellus et vestibulum. Nulla
+      scelerisque facilisis risus, id dapibus ante consequat sed. Ut quis tortor
+      at ipsum ultrices sagittis. Quisque nunc nibh, posuere ac turpis ac,
+      efficitur egestas ipsum.
+      <a class="button" mat-flat-button (click)="goToQuotes()">Get a quote</a>
+    </p>
+  </div>
+  <!-- <div class="item" style="margin-left: 1%; background-color: transparent!important"> 
         <div class="header-image"></div>
      </div> -->
- </div>
- <div id="services" class="services">
-     <div>
-         <h1>Services</h1>
-         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum arcu ac felis tristique condimentum. Nam lobortis quis quam a tincidunt. Vivamus tristique posuere mi, id scelerisque tortor tempor non. Praesent scelerisque tortor eget nunc fringilla, sed bibendum risus molestie. Aliquam mauris quam, interdum vitae augue vel, accumsan laoreet erat. Nullam sit amet est odio. Morbi nec risus in est accumsan egestas at ac velit. Vestibulum non ultrices turpis. In sed turpis ac eros rutrum scelerisque. Donec viverra pellentesque tellus et vestibulum. Nulla scelerisque facilisis risus, id dapibus ante consequat sed. Ut quis tortor at ipsum ultrices sagittis. Quisque nunc nibh, posuere ac turpis ac, efficitur egestas ipsum. 
+</div>
+<div id="services" class="services">
+  <div>
+    <h1>Services</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum
+      arcu ac felis tristique condimentum. Nam lobortis quis quam a tincidunt.
+      Vivamus tristique posuere mi, id scelerisque tortor tempor non. Praesent
+      scelerisque tortor eget nunc fringilla, sed bibendum risus molestie.
+      Aliquam mauris quam, interdum vitae augue vel, accumsan laoreet erat.
+      Nullam sit amet est odio. Morbi nec risus in est accumsan egestas at ac
+      velit. Vestibulum non ultrices turpis. In sed turpis ac eros rutrum
+      scelerisque. Donec viverra pellentesque tellus et vestibulum. Nulla
+      scelerisque facilisis risus, id dapibus ante consequat sed. Ut quis tortor
+      at ipsum ultrices sagittis. Quisque nunc nibh, posuere ac turpis ac,
+      efficitur egestas ipsum.
 
-         <a class="button" mat-flat-button (click)="goToServices()">Find out more</a>
-         </p>
-     </div>
- </div>
- <div class="sales">
-     <div class="item">
-        <div class="item-heading"> 
-            <i class="fas fa-map-marked-alt"></i>
-             <p>Nationwide deliveries and collection</p>
-         </div>
-         <p>We collect and deliver all across the UK.</p>
-     </div>
-     <div class="item">
-         <div class="item-heading"> 
-                 <i class="fas fa-file-alt"></i>
-             <p>Free no obligation quotes</p>
-         </div>
-         <p>Get a quote online today</p>
-     </div>
-     <div class="item">
-         <div class="item-heading"> 
-             <i class="fas fa-clock"></i>
-             <p>We're always open</p>
-         </div>
-         <p>Open 24 hours a day, 7 days a week.</p>
-     </div>
-     <div class="item">
-         <div class="item-heading"> 
-             <i class="fas fa-truck"></i>
-             <p>Quality vehicles</p>
-         </div>
-         <p>Small Vans to XLWB Vans, all goods are fully insured</p>
-     </div>
- </div>
- <div id="contact">
-    <app-contact></app-contact> 
- </div>
+      <a class="button" mat-flat-button (click)="goToServices()"
+        >Find out more</a
+      >
+    </p>
+  </div>
+</div>
+<div class="sales">
+  <div class="item">
+    <div class="item-heading">
+      <i class="fas fa-map-marked-alt"></i>
+      <p>Nationwide deliveries and collection</p>
+    </div>
+    <p>We collect and deliver all across the UK.</p>
+  </div>
+  <div class="item">
+    <div class="item-heading">
+      <i class="fas fa-file-alt"></i>
+      <p>Free no obligation quotes</p>
+    </div>
+    <p>Get a quote online today</p>
+  </div>
+  <div class="item">
+    <div class="item-heading">
+      <i class="fas fa-clock"></i>
+      <p>We're always open</p>
+    </div>
+    <p>Open 24 hours a day, 7 days a week.</p>
+  </div>
+  <div class="item">
+    <div class="item-heading">
+      <i class="fas fa-truck"></i>
+      <p>Quality vehicles</p>
+    </div>
+    <p>Small Vans to XLWB Vans, all goods are fully insured</p>
+  </div>
+</div>
+<div id="contact">
+  <app-contact></app-contact>
+</div>
 
+<style>
+  h1 {
+    font-family: Pacifico;
+  }
+  p {
+    font-family: Roboto;
+  }
+</style>
