--- a/sunset-courier-services/src/styles.css
+++ b/sunset-courier-services/src/styles.css
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css?family=Pacifico");
+@import url("https://fonts.googleapis.com/css?family=Roboto");
 
 html,
 body {
@@ -6,7 +8,6 @@ body {
 }
 body {
   margin: 0;
-  font-family: Metal Mania, "Helvetica Neue", sans-serif;
   color: #424242;
 }
 section {
@@ -18,8 +19,7 @@ section:nth-of-type(even) {
 }
 
 h1 {
-  font-family: Metal Mania;
-  text-align: left;
+  text-align: center;
   color: #333333;
   font-weight: 300 !important;
   font-size: 32px !important;
