Footer text corrected

--- a/sunset-courier-services/src/app/footer/footer.component.html
+++ b/sunset-courier-services/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer>
     <section>
-        &copy; 2020 Sunset Courier Ltd. All Rights Reserved.
+        &copy; 2020 Sunset Courier Services. All Rights Reserved.
     </section>
 </footer>
