--- a/sunset-courier-services/src/app/home/home.component.html
+++ b/sunset-courier-services/src/app/home/home.component.html
@@ -94,6 +94,12 @@
   <app-contact></app-contact>
 </div>
 
+<div fxHide.gt-xs>
+  <button mat-button class="quote-button" (click)="onToggleSidenav()">
+      GET A QUOTE
+  </button>
+</div>
+
 <style>
   h1 {
     font-family: Pacifico;
