--- a/sunset-courier-services/src/app/app.component.css
+++ b/sunset-courier-services/src/app/app.component.css
@@ -151,3 +151,15 @@ mat-toolbar {
   padding: 0px;
   height: auto;
 }
+
+mat-sidenav-container, mat-sidenav-content, mat-sidenav {
+    height: 100%;
+}
+ 
+mat-sidenav {
+    width: 250px;
+}
+ 
+main {
+    padding: 0;
+}
