--- a/sunset-courier-services/src/app/menu/menu.component.css
+++ b/sunset-courier-services/src/app/menu/menu.component.css
@@ -1,14 +1,16 @@
-button {
+a {
   border-radius: 0px !important;
   text-transform: uppercase;
   font-weight: 100;
   background-color: transparent;
   color: #ffffff;
+  text-decoration: none;
+  font-size: 14px;
 }
 
-button:hover,
+a:hover,
 .text-color {
-  color: #f04b23;
+  color:#cccccc;  /*#f04b23*/
 }
 
 .menu {
@@ -30,9 +32,45 @@ button:hover,
 }
 
 img {
-  left: 50px;
+  /* left: 0px;
   position: absolute;
-  display: inline-block;
+  display: inline-block; */
   height: 105px;
-  top: 0;
+  top: 10px;
+}
+/* 
+a {
+  text-decoration: none;
+  color: white;
+} */
+
+/* a:hover, a:active{
+  color: lightgray;
+} */
+
+.navigation-items{
+  list-style-type: none;
+  padding: 0;
+  margin:0;
+}
+
+mat-toolbar{
+  border-radius: 0px;
+  background-color: #000000;
+  min-height: 120px;
+  padding-right:20px;
+}
+
+mat-icon {
+  color: #ffffff;
+}
+
+@media(max-width: 959px){
+  mat-toolbar{
+      border-radius: 0px;
+  }
+
+  img {
+    height: 80px;
+  }
 }
