--- a/sunset-courier-services/src/app/menu/menu.component.html
+++ b/sunset-courier-services/src/app/menu/menu.component.html
@@ -1,20 +1,44 @@
 
-<div class="logo"></div>
+<!-- <div class="logo"></div>
 <div class="menu">
   <button mat-flat-button (click)="goToHome()">Home</button>
-  <button mat-flat-button (click)="goToQuote()">Get a Quote</button>
+  <button mat-flat-button (click)="goToQuote()">Get a Quote</button> -->
   <!-- <mat-menu #quote="matMenu">
     <button mat-menu-item>Item 1</button>
     <button mat-menu-item>Item 2</button>
   </mat-menu> -->
-  <button mat-flat-button (click)="goToServices()">Services</button>
+  <!-- <button mat-flat-button (click)="goToServices()">Services</button> -->
   <!-- <mat-menu #services="matMenu">
     <button mat-menu-item>Item 1</button>
     <button mat-menu-item>Item 2</button>
   </mat-menu> -->
-  <button mat-flat-button (click)="goToContact()">Contact</button>
+  <!-- <button mat-flat-button (click)="goToContact()">Contact</button> -->
   <!-- <mat-menu #contact="matMenu">
     <button mat-menu-item>Item 1</button>
     <button mat-menu-item>Item 2</button>
   </mat-menu> -->
-</div>
+<!-- </div> -->
+
+<mat-toolbar>
+  <div fxHide.gt-xs>
+      <button mat-icon-button (click)="onToggleSidenav()">
+          <mat-icon>menu</mat-icon>
+      </button>
+  </div>
+  <div>
+      <a routerLink="/home"><img src="../../assets/images/logo/logo.png"> </a>
+  </div>
+  <div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs>
+      <ul fxLayout fxLayoutGap="30px" class="navigation-items">
+        <li>
+          <a routerLink="/quotation">Get a Quote</a>
+        </li>
+          <li>
+              <a routerLink="/services">Services</a>
+          </li>
+          <li>
+              <a style="margin-right: 30px;" routerLink="/contact">Contact</a>
+          </li>
+      </ul>
+  </div>
+</mat-toolbar>
