fixed click event bug

--- a/sunset-courier-services/src/app/home/home.component.html
+++ b/sunset-courier-services/src/app/home/home.component.html
@@ -95,7 +95,7 @@
 </div>
 
 <div fxHide.gt-xs>
-  <button mat-button class="quote-button" (click)="onToggleSidenav()">
+  <button class="quote-button" mat-button routerLink="/quotation">
       GET A QUOTE
   </button>
 </div>
