--- a/sunset-courier-services/src/app/mobile-menu/mobile-menu.component.html
+++ b/sunset-courier-services/src/app/mobile-menu/mobile-menu.component.html
@@ -1,5 +1,5 @@
-<mat-nav-list>
-    <a mat-list-item routerLink="/home" (click)="onSidenavClose()">
+<mat-nav-list > 
+    <a mat-list-item routerLink="/home" (click)="onSidenavClose()" autoFocus="false">
         <!-- <mat-icon>home</mat-icon>  -->
         <span class="nav-caption">Home</span>
     </a>
