--- a/sunset-courier-services/src/app/app.component.html
+++ b/sunset-courier-services/src/app/app.component.html
@@ -12,7 +12,7 @@
   <mat-sidenav #sidenav role="navigation">
     <app-mobile-menu (sidenavClose)="sidenav.close()"></app-mobile-menu>
   </mat-sidenav>
-  <mat-sidenav-content>
+  <mat-sidenav-content fxLayout="column" fxFlexFill>
 
     <!-- <mat-toolbar> -->
       <!-- <header> -->
@@ -23,9 +23,14 @@
     <main>
       <router-outlet></router-outlet>
     </main>
-    <!-- <footer fxFlexOffset="auto">
-      <app-footer></app-footer>
-    </footer> -->
+    <div fxHide.gt-xs>
+      <button class="quote-button" mat-button routerLink="/quotation">
+          GET A QUOTE
+      </button>
+    </div>
+    <!-- <footer> -->
+      <app-footer fxFlexOffset="auto"></app-footer>
+    <!-- </footer> -->
   </mat-sidenav-content>
 </mat-sidenav-container>
 <!-- </app-layout> -->
