--- a/sunset-courier-services/src/app/mobile-menu/mobile-menu.component.css
+++ b/sunset-courier-services/src/app/mobile-menu/mobile-menu.component.css
@@ -1,13 +1,24 @@
 a{
     text-decoration: none;
-    color: #ffffff;
+    color: #444444;
+    font-size: 14px!important;
+    text-transform: uppercase;
 }
  
 a:hover, a:active{
-    color: #cccccc;
+    color: #f04b23;
+
+}
+
+a:hover {
+    background-color: rgba(0,0,0,0.1)!important;
 }
  
 .nav-caption{
     display: inline-block;
     padding-left: 6px;
+}
+
+a {
+ background-color: transparent!important;
 }
