smooth scrolling - in progress

--- a/sunset-courier-services/src/app/home/home.component.html
+++ b/sunset-courier-services/src/app/home/home.component.html
@@ -38,7 +38,7 @@
         <div class="header-image"></div>
      </div> -->
 </div>
-<div id="services" class="services">
+<div id="serviceInfo" class="services">
   <div>
     <h1>Services</h1>
     <p>
