--- a/sunset-courier-services/src/app/menu/menu.component.html
+++ b/sunset-courier-services/src/app/menu/menu.component.html
@@ -34,7 +34,7 @@
           <a routerLink="/quotation">Get a Quote</a>
         </li>
           <li>
-              <a routerLink="/services">Services</a>
+              <a [ngxScrollTo]="'#serviceInfo'">Services</a>
           </li>
           <li>
               <a style="margin-right: 30px;" routerLink="/contact">Contact</a>
