--- a/sunset-courier-services/src/app/home/home.component.css
+++ b/sunset-courier-services/src/app/home/home.component.css
@@ -127,7 +127,7 @@ div:nth-of-type(odd) {
 
 ul {
   list-style-type: none;
-  padding: 0 20%;
+  padding: 0 15px;
   margin: 0 auto;
   display: block;
 }
@@ -139,7 +139,7 @@ ul li i {
 }
 
 ul li {
-  padding: 5px 10px 15px;
+  padding: 5px 10px 15px 0px;
 }
 
 .card-container {
@@ -166,4 +166,78 @@ ul li {
   color: #666666;
   padding-right: 10px;
   font-size: 14px;
+}
+
+.quote-container, .container {
+  display:flex;
+  flex-direction: row;
+  padding:25px 0; 
+}
+
+.quote-container {
+  background-color: transparent!important;
+}
+
+.quote-container div {
+  width: 50%;
+  background-color: transparent!important;
+}
+
+mat-card:last-of-type {
+  width:100%;
+  margin: 10px 0px 10px 0px;
+}
+
+
+mat-card {
+  width: 100%;
+  margin: 10px 20px 10px 0px;
+}
+
+mat-card-title {
+  font-size: 18px;
+  font-weight: 500;
+  color: #222222;
+}
+
+mat-card-content {
+  padding: 0 15px;
+}
+
+mat-card p {
+  font-size: 16px;
+  font-weight: 500;
+}
+
+mat-card-header {
+  padding: 10px 0 0;
+}
+
+p {
+  font-size: 16px;
+}
+
+ul {
+  list-style-type: none;
+  padding-left: 5px;
+}
+
+ul li i {
+  color: #f04b23;
+  font-size: 18px;
+  margin-right: 10px;
+}
+
+ul li {
+  padding: 5px 5px 15px 0px;
+}
+
+
+
+
+@media(max-width: 959px)
+{
+  .container {
+    flex-direction: column;
+  }
 }
