--- a/sunset-courier-services/src/app/home/home.component.html
+++ b/sunset-courier-services/src/app/home/home.component.html
@@ -1,38 +1,34 @@
 <div class="carousel">
   <app-image-carousel></app-image-carousel>
 </div>
-<div class="quotes" style="padding-top: 6rem;">
+
+
+<div id="quotes" class="quotes" style="padding-top: 6rem;">
   <!-- class="item" style="margin-right: 1%;" -->
   <div>
     <h1>Driven to deliver</h1>
-    <!-- <ul>
-         <li>
-             <i class="fas fa-check-circle"></i>
-             Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-         </li>
-         <li>
-             <i class="fas fa-check-circle"></i>
-             Praesent ut quam vehicula, rhoncus justo sit amet, aliquet lorem
-         </li>
-         <li>
-             <i class="fas fa-check-circle"></i>
-             Cras vehicula orci nec dapibus congue.
-         </li>
-     </ul>  -->
-    <p>
+    <div class="quote-container">
+    <div><p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum
       arcu ac felis tristique condimentum. Nam lobortis quis quam a tincidunt.
-      Vivamus tristique posuere mi, id scelerisque tortor tempor non. Praesent
+      Vivamus tristique posuere mi, id scelerisque tortor tempor non.</p>
+      
+      <p>Praesent
       scelerisque tortor eget nunc fringilla, sed bibendum risus molestie.
       Aliquam mauris quam, interdum vitae augue vel, accumsan laoreet erat.
       Nullam sit amet est odio. Morbi nec risus in est accumsan egestas at ac
-      velit. Vestibulum non ultrices turpis. In sed turpis ac eros rutrum
+      velit. Vestibulum non ultrices turpis. </p> 
+      
+      <p>In sed turpis ac eros rutrum
       scelerisque. Donec viverra pellentesque tellus et vestibulum. Nulla
       scelerisque facilisis risus, id dapibus ante consequat sed. Ut quis tortor
       at ipsum ultrices sagittis. Quisque nunc nibh, posuere ac turpis ac,
-      efficitur egestas ipsum.
-      <a class="button" mat-flat-button (click)="goToQuotes()">Get a quote</a>
-    </p>
+      efficitur egestas ipsum. </p>
+     
+    </div>
+    <div>
+    <app-quotation></app-quotation></div>
+  </div>
   </div>
   <!-- <div class="item" style="margin-left: 1%; background-color: transparent!important"> 
         <div class="header-image"></div>
@@ -41,26 +37,74 @@
 <div id="serviceInfo" class="services">
   <div>
     <h1>Services</h1>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum
-      arcu ac felis tristique condimentum. Nam lobortis quis quam a tincidunt.
-      Vivamus tristique posuere mi, id scelerisque tortor tempor non. Praesent
-      scelerisque tortor eget nunc fringilla, sed bibendum risus molestie.
-      Aliquam mauris quam, interdum vitae augue vel, accumsan laoreet erat.
-      Nullam sit amet est odio. Morbi nec risus in est accumsan egestas at ac
-      velit. Vestibulum non ultrices turpis. In sed turpis ac eros rutrum
-      scelerisque. Donec viverra pellentesque tellus et vestibulum. Nulla
-      scelerisque facilisis risus, id dapibus ante consequat sed. Ut quis tortor
-      at ipsum ultrices sagittis. Quisque nunc nibh, posuere ac turpis ac,
-      efficitur egestas ipsum.
 
-      <a class="button" mat-flat-button (click)="goToServices()"
-        >Find out more</a
-      >
-    </p>
+      <div>
+        <p>
+            Our modern fleet of vans includes long wheel base and extra long wheel base, enabling us to move almost anything.
+        </p>
+        <p>
+            Our drivers are always happy to help load and unload, but now and again an extra pair of hands is required we can provide you with a helper.
+        </p>
+        <p>
+            With insurance for goods in transit to a value of £10,000, you can be sure that your delivery is safe. And to keep your costs as low as possible, for non-urgent deliveries we offer an end-of-day delivery service for London postcodes.
+        </p>
+        <p>Other services provided, house removal, man with van.</p>
+    </div>
+    <div class="container">
+      <mat-card>
+          <mat-card-header>
+              <mat-card-title>Fully insured</mat-card-title>
+          </mat-card-header>
+          <mat-card-content>
+              <ul>
+                  <li>
+                      <i class="fas fa-check-circle"></i>
+                      Up to £10,000 Goods In Transit
+                  </li>
+                  <li>
+                      <i class="fas fa-check-circle"></i>
+                      Small vans to XLWB vans, all goods and vehicles are fully insured 
+                  </li>
+                
+              </ul>
+          </mat-card-content>
+      </mat-card>
+  
+      <mat-card>
+              <mat-card-header>
+                  <mat-card-title>Free no obligation quotes</mat-card-title>
+              </mat-card-header>
+              <mat-card-content>
+                <ul>
+                  <li>
+                      <i class="fas fa-check-circle"></i>Free no obligation quotes
+                  </li>
+                  <li>
+                  <i class="fas fa-check-circle"></i>Friendly, reliable staff
+              </li>
+              </ul>
+                </mat-card-content>
+      </mat-card>
+  
+      <mat-card>
+        <mat-card-header>
+            <mat-card-title>Nationwide deliveries and collection</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <ul>
+            <li>
+                <i class="fas fa-check-circle"></i>Open 24 hours a day, 7 days a week
+            </li>
+            <li><i class="fas fa-check-circle"></i>We collect and deliver all across the UK</li>
+          </ul>
+          </mat-card-content>
+    </mat-card>
+      </div>
+      <!-- <a class="button" mat-flat-button (click)="goToServices()">Find out more</a> -->
+    
   </div>
 </div>
-<div class="sales">
+<!-- <div class="sales">
   <div class="item">
     <div class="item-heading">
       <i class="fas fa-map-marked-alt"></i>
@@ -87,9 +131,15 @@
       <i class="fas fa-truck"></i>
       <p>Quality vehicles</p>
     </div>
-    <p>Small Vans to XLWB Vans, all goods are fully insured</p>
+    <p>Quality vehicles small vans to XLWB Vans, all goods are fully insured</p>
   </div>
-</div>
+</div> -->
+
+
+
+
+
+
 <div id="contact">
   <app-contact></app-contact>
 </div>
