--- a/sunset-courier-services/src/app/menu/menu.component.css
+++ b/sunset-courier-services/src/app/menu/menu.component.css
@@ -1,4 +1,4 @@
-a {
+button {
   border-radius: 0px !important;
   text-transform: uppercase;
   font-weight: 100;
@@ -6,12 +6,21 @@ a {
   color: #ffffff;
   text-decoration: none;
   font-size: 14px;
+  border: none!important;
+  cursor: pointer;
 }
 
-a:hover,
+button:hover,
 .text-color {
   color:#cccccc;  /*#f04b23*/
 }
+
+button:active, button:focus {
+ border: none!important;
+ border: 0!important;
+ outline:0;
+}
+
 
 .menu {
   padding: 50px 50px 35px 20px;
