--- a/sunset-courier-services/src/app/home/home.component.html
+++ b/sunset-courier-services/src/app/home/home.component.html
@@ -26,8 +26,7 @@
       efficitur egestas ipsum. </p>
      
     </div>
-    <div>
-    <app-quotation></app-quotation></div>
+    <div><app-quotation></app-quotation></div>
   </div>
   </div>
   <!-- <div class="item" style="margin-left: 1%; background-color: transparent!important"> 
@@ -135,16 +134,12 @@
   </div>
 </div> -->
 
-
-
-
-
-
 <div id="contact">
+
+    <h1 style="padding-top: 6rem;">Contact Us</h1>
   <app-contact></app-contact>
+  
 </div>
-
-
 
 <style>
   h1 {
