--- a/sunset-courier-services/src/app/app.component.html
+++ b/sunset-courier-services/src/app/app.component.html
@@ -23,11 +23,11 @@
     <main>
       <router-outlet></router-outlet>
     </main>
-    <div fxHide.gt-xs>
-      <button class="quote-button" mat-button routerLink="/quotation">
-          GET A QUOTE
-      </button>
-    </div>
+    <div fxHide.gt-xs class="mobile-quote">
+      <button mat-button class="quote-button" routerLink="/quotation">Get a Quote</button>
+     
+      </div>
+ 
     <!-- <footer> -->
       <app-footer fxFlexOffset="auto"></app-footer>
     <!-- </footer> -->
