--- a/sunset-courier-services/src/app/home/home.component.html
+++ b/sunset-courier-services/src/app/home/home.component.html
@@ -3,7 +3,7 @@
 </div>
 
 
-<div id="quotes" class="quotes" style="padding-top: 6rem;">
+<div id="quotes" class="quotes">
   <!-- class="item" style="margin-right: 1%;" -->
   <div>
     <h1>Driven to deliver</h1>
@@ -135,17 +135,6 @@
 </div> -->
 
 <div id="contact">
-
-    <h1 style="padding-top: 6rem;">Contact Us</h1>
-  <app-contact></app-contact>
-  
+    <app-contact></app-contact>
 </div>
 
-<style>
-  h1 {
-    font-family: Pacifico;
-  }
-  p {
-    font-family: Roboto;
-  }
-</style>
