--- a/sunset-courier-services/src/app/menu/menu.component.html
+++ b/sunset-courier-services/src/app/menu/menu.component.html
@@ -20,12 +20,12 @@
 <!-- </div> -->
 
 <mat-toolbar>
-  <div fxHide.gt-xs>
+  <!-- <div fxHide.gt-xs>
       <button mat-icon-button (click)="onToggleSidenav()">
           <mat-icon>menu</mat-icon>
       </button>
-  </div>
-  <div>
+  </div> -->
+  <div class="logoImage">
       <a routerLink="/home"><img src="../../assets/images/logo/logo.png"> </a>
   </div>
   <div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs>
