--- a/sunset-courier-services/src/app/contact/contact.component.html
+++ b/sunset-courier-services/src/app/contact/contact.component.html
@@ -1,33 +1,25 @@
+<h1>Contact Us</h1>
 <div class="contact">
     <div class="container">
-    <mat-card>
-        <mat-card-header>
-            <mat-card-title>Call</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-            <a mat-flat-button href="tel: 07458 302808"> <i class="fas fa-phone-alt"></i> 
-                07458 302808 
-            </a>
-        </mat-card-content>
-    </mat-card>
-    <mat-card>
-            <mat-card-header>
-                <mat-card-title>Chat</mat-card-title>
-            </mat-card-header>
-            <mat-card-content style="padding: 0 32px"> 
-                <i style="color: #25D366; font-size: 32px;" class="fab fa-whatsapp-square"></i><a href="https://wa.me/447458302808">Chat to us in WhatsApp
+       <div>
+        <i class="fas fa-phone-alt"></i> <a  href="tel: 07458 302808"> 
+            07458 302808 
+        </a>
+       </div>
+
+   <div>
+       
+                <i class="fab fa-whatsapp-square wa"></i><a href="https://wa.me/447458302808">Chat to us in WhatsApp
                 </a>
-            </mat-card-content>
-    </mat-card>
-    <mat-card>
-            <mat-card-header>
-                <mat-card-title>Email</mat-card-title>
-            </mat-card-header>
-            <mat-card-content style="padding: 0 32px"> 
+        
+ </div>
+         
+      <div>
                 <i class="fas fa-envelope"></i><a href="mailto:contact@sunsetcourierservices.co.uk">contact@sunsetcourierservices.co.uk
                 </a>
-            </mat-card-content>
-    </mat-card>
+            </div>
+            <!-- </mat-card-content>
+    </mat-card> -->
    
 
     </div>
