--- a/sunset-courier-services/src/app/image-carousel/image-carousel.component.css
+++ b/sunset-courier-services/src/app/image-carousel/image-carousel.component.css
@@ -1,3 +1,12 @@
 .mat-button.mat-accent, .mat-icon-button.mat-accent, .mat-stroked-button.mat-accent{
     color:#ffffff!important;
 }
+
+
+@media(max-width: 959px)
+{
+    h1 {
+        font-size: 14px!important;
+        padding: 10px 75px;
+    }
+}
