--- a/sunset-courier-services/src/styles.css
+++ b/sunset-courier-services/src/styles.css
@@ -1,11 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 @import url("https://fonts.googleapis.com/css?family=Pacifico");
 @import url("https://fonts.googleapis.com/css?family=Roboto");
+@import url("https://fonts.googleapis.com/css?family=Cinzel");
 
 html,
 body {
   height: 100%;
   scroll-behavior: smooth;
+  font-family: Roboto;
 }
 
 body {
@@ -26,6 +28,7 @@ h1 {
   font-weight: 300 !important;
   font-size: 32px !important;
   padding-bottom: 20px !important;
+  font-family: Cinzel!important;
 }
 
 button {
@@ -54,6 +57,18 @@ mat-toolbar {
   z-index: 3;
 }
 
-app-contact > .contact {
-  padding: 0rem 0 5rem !important;
+
+
+@media(max-width: 959px){
+  .quote-button .mat-button-wrapper {
+    width:275px!important;
+  }
+
+  h1{
+    font-size: 24px !important;
+    padding-bottom: 20px !important;
+    font-family: Cinzel!important;
+}
+
+
 }
